force-app/main/default/objects/Lead_progress_tracker__c/Lead_progress_tracker__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead_progress_tracker</label>
</CustomObject>