force-app/main/default/objects/Lead_progress_tracker__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>