force-app/main/default/objects/Lead_progress_tracker__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>15</length>
    <type>Text</type>
</CustomField>