force-app/main/default/objects/Lead_progress_tracker__c/fields/Status1__c.field-meta.xml
<CustomField>
    <fullName>Status1__c</fullName>
    <label>Status1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>