force-app/main/default/objects/Lead_progress_tracker__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <label>Status2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>