force-app/main/default/objects/Lead_progress_tracker__c/fields/Status3__c.field-meta.xml
<CustomField>
    <fullName>Status3__c</fullName>
    <label>Status3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>